fix contrast on profile

--- a/client/containers/accountSettingTab/accountSettingTab.module.css
+++ b/client/containers/accountSettingTab/accountSettingTab.module.css
@@ -4,6 +4,8 @@
 
 .tabIcon {display: none;}
 
+.tabText{color: var(--primary-color);}
+
 
 @media screen and (max-width: 576px){
     .tabIcon{display: inline-block;}
